<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/modes_title"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="paranoid_mode"
            app:title="@string/paranoid_title"
            app:summary="@string/paranoid_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/other_title"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="about"
            app:title="@string/about_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="usage"
            app:title="@string/usage_title"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:title="@string/version_title"
            app:summary="CovidShield 0.1.1"/>
    </PreferenceCategory>



</PreferenceScreen>
