<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/longDescriptionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reallyme.app.about.AboutReallyMeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ddgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/covidShieldLogoDescription"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:text="@string/aboutHeading"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="6sp"
            android:text="@string/aboutDescription"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal"
             />

        <TextView
            android:id="@+id/learnMoreLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:text="@string/aboutMoreLink"
            android:textAlignment="center"
            android:textColor="@color/powderBlue"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
