<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/longDescriptionContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.reallyme.app.about.AboutReallyMeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ddgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@null"
                android:src="@drawable/guide" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/bluetoothItem"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="left"
                    android:contentDescription="@null"
                    android:src="@drawable/bl_circle_blue" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/bluetooth"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="6sp"
                android:text="@string/bluetoothInstructions"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="normal"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/wifiItem"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="left"
                    android:contentDescription="@null"
                    android:src="@drawable/wifi_circle_blue" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/wifi"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="6sp"
                android:text="@string/wifiInstructions"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="normal"
                />
            <TextView
                android:id="@+id/locationLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:text="@string/activerLocationLink"
                android:textAlignment="center"
                android:textColor="@color/powderBlue"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
